--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <style>
         /* This is for the hero background image */
         .hero-background {
-            background: url(/img/background.png) no-repeat center center;
+            background: url(https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/background.png) no-repeat center center;
             background-size: cover;
             color: #ffffff; /* Text color, you can adjust as needed */
         }
@@ -70,8 +70,8 @@
             <!-- Portfolio item 1 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="/img/Project 1.png" class="card-img-top" alt="Portfolio Item 1">
-                    <img src="/img/Project 1a.png" class="card-img-top" alt="Portfolio Item 1a">
+                    <img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%201.png" class="card-img-top" alt="Portfolio Item 1">
+                    <img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%201a.png" class="card-img-top" alt="Portfolio Item 1a">
                     <div class="card-body">
                         <h5 class="card-title"> Project 1: Active Travel</h5>
                         <p class="card-text">The promotion of sustainable transportation systems and improved public health outcomes depends on the development of active travel capacity. In this project, we dive more into what capacity building for active travel mean and how could these frameworks helps to address Africa's transport system. Part of this is also to explore the role of Participatory GIS in capacity for active travel. Read more about the project by clicking the link below.</p>
