--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <!-- Portfolio item 2 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="/img/Project 2.png" class="card-img-top" alt="Portfolio Item 2">
+                    <img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%202.png" class="card-img-top" alt="Portfolio Item 2">
                     <div class="card-body">
                         <h5 class="card-title"> Project 2: Urban Green and Sustainability</h5>
                         <p class="card-text">As cities experience rapid growth, the threat of environmental hazards looms large. Our project on Urban green and sustainability provides cities with tangible solutions that not only enhance the aesthetic appeal of urban areas but also contribute positively to the environment as well as mitigate climate change impact. Read more about the project here.</p>
@@ -102,7 +102,7 @@
             <!-- Portfolio item 3 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="/img/Project 3.png" class="card-img-top" alt="Portfolio Item 3">
+                    <img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%203.png" class="card-img-top" alt="Portfolio Item 3">
                     <div class="card-body">
                         <h5 class="card-title">Project 3: Monitoring Land use change</h5>
                         <p class="card-text">In the face of rapid environmental shifts and anthropogenic pressures, the effective monitoring and management of conservation areas have become paramount. Our Research focuses on National Reserves increasingly vulnerable to threats from urbanization and resource degradation. To address this, our research aimed to produce detailed land use/land cover (LULC) maps and incorporate a robust change detection mechanism tailored for West African conservation reserves. We leverage different Machine Learning Algorithms to create high-quality land use maps and detect changes. Read about the work by following the link bellow.</p>
@@ -123,7 +123,7 @@
             <!-- Portfolio item 4 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="/img/Project 4.png" class="card-img-top" alt="Portfolio Item 4">
+                    <img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%204.png" class="card-img-top" alt="Portfolio Item 4">
                     <div class="card-body">
                         <h5 class="card-title"> Project 4:Machine Learning for Land use classification</h5>
                         <p class="card-text">Monitoring Bush Encroachment and Landuse change for Comoé and Lamto National reserve (1960-2022).</p>
@@ -139,7 +139,7 @@
             <!-- Portfolio item 5 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="/img/Project 5.png" class="card-img-top" alt="Portfolio Item 5">
+                    <img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%205.png" class="card-img-top" alt="Portfolio Item 5">
                     <div class="card-body">
                         <h5 class="card-title"> Project 5: PhD collaboration: Conservation Biocontrol</h5>
                         <p class="card-text">The worldwide sustainability of coffee production is threatened by pests, diseases, and global warming. In Colombia, the Coffee Berry Borer (CBB) is a major problem. This beetle reduces crop yield and quality by drilling the coffee berries and feeding on the beans during the beetle’s immature stages. Coffee farmers have developed CBB control strategies such as the use of chemical insecticides, the manual collection of infested berries, and the use of entomopathogenic fungi, but despite these practices, CBB remains a major problem in coffee production. A promising yet understudied approach to CBB control is conservation biological control (CBC), defined as the regulation of pest populations by supporting populations of naturally occurring natural enemies.</p>
@@ -154,7 +154,7 @@
             <!-- Portfolio item 6 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="/img/Project 6.png" class="card-img-top" alt="Portfolio Item 6">
+                    <img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%206.png" class="card-img-top" alt="Portfolio Item 6">
                     <div class="card-body">
                         <h5 class="card-title"> Project 6: Collaboration: Wildfire Assessment</h5>
                         <p class="card-text">The International Programs Office of the United States Forest Service is embarking on an effort to assess the
@@ -175,7 +175,7 @@
             <!-- Portfolio item 7 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="/img/Project 7.png" class="card-img-top" alt="Portfolio Item 7">
+                    <img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%207.png" class="card-img-top" alt="Portfolio Item 7">
                     <div class="card-body">
                         <h5 class="card-title"> Project 7: Modelling Biomas for Heat Production</h5>
                         <p class="card-text">In this project, the challenge is to identify what the best location of a biomass production is, the available biomass within a zone of 25km and the energy content within the zone of biomass plants for heat production. This assessment is based on range of factors such as weight of biomass that can be extracted, and available energy content per year per different land use categories..</p>
@@ -192,7 +192,7 @@
             <!-- Portfolio item 7 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="/img/Project 7a.png" class="card-img-top" alt="Portfolio Item 7">
+                    <img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%207a.png" class="card-img-top" alt="Portfolio Item 7">
                     <div class="card-body">
                         <h5 class="card-title"> Project 8: Academische consultatie training</h5>
                         <p class="card-text">•Toekomstig klimaatbestendig ontwerpen (Land van Maas en Waal in 100 jaar)
@@ -211,7 +211,7 @@
             <!-- Portfolio item 8 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="/img/Project 8.png" class="card-img-top" alt="Portfolio Item 8">
+                    <img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%208.png" class="card-img-top" alt="Portfolio Item 8">
                     <div class="card-body">
                         <h5 class="card-title"> Project 9: Integrated Fire Management</h5>
                         <p class="card-text">2018 and 2019 were only a glimpse of what to expect in the future: deadly mega-fires in Mediterranean regions, high fire activity in temperate and boreal areas outside typical fire seasons and regions, and politicized deforestation fires in the Amazon. 2019 ended with a fire crisis in Australia that has never been seen before. Striking amidst these fires making year-round headlines is the lack of attention for fires in developing countries.</p>
@@ -227,7 +227,7 @@
             <!-- Portfolio item 9 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="/img/Project 9.png" class="card-img-top" alt="Portfolio Item 9">
+                    <img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%209.png" class="card-img-top" alt="Portfolio Item 9">
                     <div class="card-body">
                         <h5 class="card-title"> Project 10: Just City-Political Dilemas in Spatial Planning</h5>
                         <p class="card-text">Poplar lake is an active and lively neighborhood. It is structured by three distinct landmarks, lake poplar, Sterflat reloaded and the community center and urban edges which mark the orders of the different districts and the lakeshore (Lynch, 1960).</p>
@@ -243,7 +243,7 @@
             <!-- Portfolio item 4 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="/img/Project 10.png" class="card-img-top" alt="Portfolio Item 10">
+                    <img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%2010.png" class="card-img-top" alt="Portfolio Item 10">
                     <div class="card-body">
                         <h5 class="card-title"> Project 11: Cleaner cities (DEALS)</h5>
                         <p class="card-text">As part of the targeted objectives of the DEALS project, a pre-testing exercise of the data collection
@@ -264,7 +264,7 @@
             <!-- Portfolio item 12 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="/img/Project 12.png" class="card-img-top" alt="Portfolio Item 12">
+                    <img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%2012.png" class="card-img-top" alt="Portfolio Item 12">
                     <div class="card-body">
                         <h5 class="card-title"> Project 12: Energyzing Development</h5>
                         <p class="card-text">Energizing development is implemented as part of the GIZ Renewable Energy Project in Ghana. EnDev promotes sustainable access to modern energy services that meet the needs of the poor, for a long lasting, aﬀordable, and appreciated by users.</p>
@@ -279,9 +279,9 @@
             <!-- Portfolio item 11 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="/img/Project 11.png" class="card-img-top" alt="Portfolio Item 11">
+                    <img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%2011.png" class="card-img-top" alt="Portfolio Item 11">
                     <div class="card-body">
-                        <h5 class="card-title"> Project 13: Water Treatment & Expansion</h5>
+                        <h5 class="card-title"> Project 11: Water Treatment & Expansion</h5>
                         <p class="card-text">The project, which began in September 2011, was funded through a 21.6 million dollar loan facility from the US and was undertaken by UEM Incorporated. The project involved the expansion of the headwater and the rehabilitation of the old one which was constructed in 1961.</p>
                         <p><strong>Duration:</strong> [2013-2014]</p>
                         <p><strong>Country:</strong> [Ghana]</p>
@@ -295,8 +295,8 @@
             <!-- Portfolio item 4 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="/img/Project 13.png" class="card-img-top" alt="Portfolio Item 13">
-                    <img src="/img/Project 13a.png" class="card-img-top" alt="Portfolio Item 13">
+                    <img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%2013.png" class="card-img-top" alt="Portfolio Item 13">
+                    <img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%2013a.png" class="card-img-top" alt="Portfolio Item 13">
                     <div class="card-body">
                         <h5 class="card-title"> Project 14: Metropolitan Workshop</h5>
                         <p class="card-text">The goal of the Workshop is to make an inquiry into the spatial dynamics of a Metropolitan area(Ejura). Assess it infrastructure services and their corresponding population usage. On the basis of these, recommed and design a Master and local plan for the area. An inquiry was then chosen to specifically focus on designing a Waste Management Plan for the area.</p>
@@ -311,7 +311,7 @@
             <!-- Portfolio item 14 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="/img/Project 14.png" class="card-img-top" alt="Portfolio Item 14">
+                    <img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%2014.png" class="card-img-top" alt="Portfolio Item 14">
                     <div class="card-body">
                         <h5 class="card-title"> Project 15: Muncipal Workshop</h5>
                         <p class="card-text">The goal of the Workshop is to make an inquiry into the spatial dynamics of a muncipality(Mampong). Assess it infrastructure services and their corresponding population usage. On the basis of these, recommed and design a Master and local plan for the area.</p>
@@ -326,7 +326,7 @@
             <!-- Portfolio item 15 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="/img/Project 15.png" class="card-img-top" alt="Portfolio Item 15">
+                    <img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%2015.png" class="card-img-top" alt="Portfolio Item 15">
                     <div class="card-body">
                         <h5 class="card-title"> Project 16: Rural Workshop</h5>
                         <p class="card-text">he goal of the Workshop is to make an inquiry into the spatial dynamics of a Rural Area(Bobiem). Assess it infrastructure services and their corresponding population usage. On the basis of these, recommed and design a Master and local plan for the area.</p>
@@ -341,7 +341,7 @@
                     <!-- Portfolio item 16 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="/img/Project 16.png" class="card-img-top" alt="Portfolio Item 16">
+                    <img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%2016.png" class="card-img-top" alt="Portfolio Item 16">
                     <div class="card-body">
                         <h5 class="card-title"> Project 17: IDEA</h5>
                         <p class="card-text">Our Goal is to: Improve livelihoods in a manner that reduces poverty and empowers the young and vulnerable.</p>
