--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                     <img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%2015.png" class="card-img-top" alt="Portfolio Item 15">
                     <div class="card-body">
                         <h5 class="card-title"> Project 16: Rural Workshop</h5>
-                        <p class="card-text">he goal of the Workshop is to make an inquiry into the spatial dynamics of a Rural Area(Bobiem). Assess it infrastructure services and their corresponding population usage. On the basis of these, recommed and design a Master and local plan for the area.</p>
+                        <p class="card-text">The goal of the Workshop is to make an inquiry into the spatial dynamics of a Rural Area(Bobiem). Assess it infrastructure services and their corresponding population usage. On the basis of these, recommed and design a Master and local plan for the area.</p>
                         <p><strong>Duration:</strong> [2015-2016]</p>
                         <p><strong>Country:</strong> [Ghana]</p>
                         <p><strong>Mentor/Referee:</strong> [Prof. K.K Adarkwa, Prof. Owusu Ansah]</p>
