--- a/index.html
+++ b/index.html
@@ -175,10 +175,27 @@
             <!-- Portfolio item 7 -->
             <div class="col-md-4">
                 <div class="card">
+                    <img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Picture7a.png" class="card-img-top" alt="Portfolio Item 7">
+                    <div class="card-body">
+                        <h5 class="card-title"> Project 7a: Geodatabase-Parking Management</h5>
+                        <p class="card-text">As urbanization continues to increase, managing parking behaviour in municipalities has become an important aspect of urban planning (Litman, 2017). With the rise in the number of vehicles on the roads, finding available parking spaces has become a significant challenge, causing congestion, pollution, and frustration for both drivers and pedestrians (Shoup, 2006). Therefore, understanding parking behaviour is a critical area of study for municipalities to manage and improve parking efficiency. In this project assignment, students are confronted with documenting a geodatabase schema, the processes and how this can be implemented to answer specific information requests for the Municipality of Alkmaar.</p>
+                        <p><strong>Duration:</strong> [2023]</p>
+                        <p><strong>Country:</strong> [Netherlands]</p>
+                        <p><strong>Mentor/Referee:</strong> [Dr. Maurice de kleijn]</p>
+                        <a href="https://drive.google.com/file/d/1HeVMG3Fnfuuf--d3sVUK25VTGQqTaKtd/view?usp=sharing" class="btn btn-primary">Read More</a>
+                        <a href="https://docs.google.com/document/d/1alKLHRC_99KQwsd_UqhU3BOSupG78sQa/edit" class="btn btn-primary">Read More</a>
+                        <a href="#" class="btn btn-secondary" data-toggle="modal" data-target="#requestAccessModal">Download/Request Access</a>
+                    </div>
+                </div>
+            </div>              
+        <!-- Projects 7-9 -->
+            <!-- Portfolio item 7 -->
+            <div class="col-md-4">
+                <div class="card">
                     <img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%207.png" class="card-img-top" alt="Portfolio Item 7">
                     <div class="card-body">
-                        <h5 class="card-title"> Project 7: Modelling Biomas for Heat Production</h5>
-                        <p class="card-text">In this project, the challenge is to identify what the best location of a biomass production is, the available biomass within a zone of 25km and the energy content within the zone of biomass plants for heat production. This assessment is based on range of factors such as weight of biomass that can be extracted, and available energy content per year per different land use categories..</p>
+                        <h5 class="card-title"> Project 7: Modelling Biomass for Heat Production</h5>
+                        <p class="card-text">In this project, the challenge is to identify what the best location of biomass production is, the available biomass within a zone of 25km and the energy content within the zone of biomass plants for heat production. This assessment is based on range of factors such as weight of biomass that can be extracted, and available energy content per year per different land use categories..</p>
                         <p><strong>Duration:</strong> [2022]</p>
                         <p><strong>Country:</strong> [Netherlands]</p>
                         <p><strong>Mentor/Referee:</strong> [ Prof. Ac. Jaar]</p>
