--- a/index.html
+++ b/index.html
@@ -177,13 +177,13 @@
                 <div class="card">
                     <img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Picture7a.png" class="card-img-top" alt="Portfolio Item 7">
                     <div class="card-body">
-                        <h5 class="card-title"> Project 7a: Geodatabase-Parking Management</h5>
+                        <h5 class="card-title"> Project 7: Geodatabase-Parking Management</h5>
                         <p class="card-text">As urbanization continues to increase, managing parking behaviour in municipalities has become an important aspect of urban planning (Litman, 2017). With the rise in the number of vehicles on the roads, finding available parking spaces has become a significant challenge, causing congestion, pollution, and frustration for both drivers and pedestrians (Shoup, 2006). Therefore, understanding parking behaviour is a critical area of study for municipalities to manage and improve parking efficiency. In this project assignment, students are confronted with documenting a geodatabase schema, the processes and how this can be implemented to answer specific information requests for the Municipality of Alkmaar.</p>
                         <p><strong>Duration:</strong> [2023]</p>
                         <p><strong>Country:</strong> [Netherlands]</p>
                         <p><strong>Mentor/Referee:</strong> [Dr. Maurice de kleijn]</p>
-                        <a href="https://drive.google.com/file/d/1HeVMG3Fnfuuf--d3sVUK25VTGQqTaKtd/view?usp=sharing" class="btn btn-primary">Read More</a>
-                        <a href="https://docs.google.com/document/d/1alKLHRC_99KQwsd_UqhU3BOSupG78sQa/edit" class="btn btn-primary">Read More</a>
+                        <a href="https://docs.google.com/document/d/1ey1ZCo_69SQlAMDclRe5yi_ukQyVTJPs/edit?usp=sharing&ouid=100089096446664020253&rtpof=true&sd=true" class="btn btn-primary">Read More</a>
+                        <a href="#" class="btn btn-primary">Read More</a>
                         <a href="#" class="btn btn-secondary" data-toggle="modal" data-target="#requestAccessModal">Download/Request Access</a>
                     </div>
                 </div>
@@ -194,7 +194,7 @@
                 <div class="card">
                     <img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%207.png" class="card-img-top" alt="Portfolio Item 7">
                     <div class="card-body">
-                        <h5 class="card-title"> Project 7: Modelling Biomass for Heat Production</h5>
+                        <h5 class="card-title"> Project 8: Modelling Biomass for Heat Production</h5>
                         <p class="card-text">In this project, the challenge is to identify what the best location of biomass production is, the available biomass within a zone of 25km and the energy content within the zone of biomass plants for heat production. This assessment is based on range of factors such as weight of biomass that can be extracted, and available energy content per year per different land use categories..</p>
                         <p><strong>Duration:</strong> [2022]</p>
                         <p><strong>Country:</strong> [Netherlands]</p>
@@ -211,7 +211,7 @@
                 <div class="card">
                     <img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%207a.png" class="card-img-top" alt="Portfolio Item 7">
                     <div class="card-body">
-                        <h5 class="card-title"> Project 8: Academische consultatie training</h5>
+                        <h5 class="card-title"> Project 9: Academische consultatie training</h5>
                         <p class="card-text">•Toekomstig klimaatbestendig ontwerpen (Land van Maas en Waal in 100 jaar)
                             • Stakeholder engagement and Process analysis
                             • Gegevensverzameling en analyse
@@ -230,7 +230,7 @@
                 <div class="card">
                     <img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%208.png" class="card-img-top" alt="Portfolio Item 8">
                     <div class="card-body">
-                        <h5 class="card-title"> Project 9: Integrated Fire Management</h5>
+                        <h5 class="card-title"> Project 10: Integrated Fire Management</h5>
                         <p class="card-text">2018 and 2019 were only a glimpse of what to expect in the future: deadly mega-fires in Mediterranean regions, high fire activity in temperate and boreal areas outside typical fire seasons and regions, and politicized deforestation fires in the Amazon. 2019 ended with a fire crisis in Australia that has never been seen before. Striking amidst these fires making year-round headlines is the lack of attention for fires in developing countries.</p>
                         <p><strong>Duration:</strong> [2022-2023]</p>
                         <p><strong>Country:</strong> [Europe, Africa]</p>
@@ -246,7 +246,7 @@
                 <div class="card">
                     <img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%209.png" class="card-img-top" alt="Portfolio Item 9">
                     <div class="card-body">
-                        <h5 class="card-title"> Project 10: Just City-Political Dilemas in Spatial Planning</h5>
+                        <h5 class="card-title"> Project 11: Just City-Political Dilemas in Spatial Planning</h5>
                         <p class="card-text">Poplar lake is an active and lively neighborhood. It is structured by three distinct landmarks, lake poplar, Sterflat reloaded and the community center and urban edges which mark the orders of the different districts and the lakeshore (Lynch, 1960).</p>
                         <p><strong>Duration:</strong> [2020]</p>
                         <p><strong>Country:</strong> [Netherlands]</p>
@@ -262,7 +262,7 @@
                 <div class="card">
                     <img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%2010.png" class="card-img-top" alt="Portfolio Item 10">
                     <div class="card-body">
-                        <h5 class="card-title"> Project 11: Cleaner cities (DEALS)</h5>
+                        <h5 class="card-title"> Project 12: Cleaner cities (DEALS)</h5>
                         <p class="card-text">As part of the targeted objectives of the DEALS project, a pre-testing exercise of the data collection
                             instrument was undertaken as a follow-up to an earlier held training workshop in confidence of
                             training selected enumerators and supervisors on the goals and objectives of the project. In this
@@ -283,7 +283,7 @@
                 <div class="card">
                     <img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%2012.png" class="card-img-top" alt="Portfolio Item 12">
                     <div class="card-body">
-                        <h5 class="card-title"> Project 12: Energyzing Development</h5>
+                        <h5 class="card-title"> Project 13: Energyzing Development</h5>
                         <p class="card-text">Energizing development is implemented as part of the GIZ Renewable Energy Project in Ghana. EnDev promotes sustainable access to modern energy services that meet the needs of the poor, for a long lasting, aﬀordable, and appreciated by users.</p>
                         <p><strong>Duration:</strong> [2019]</p>
                         <p><strong>Country:</strong> [Ghana]</p>
@@ -298,7 +298,7 @@
                 <div class="card">
                     <img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%2011.png" class="card-img-top" alt="Portfolio Item 11">
                     <div class="card-body">
-                        <h5 class="card-title"> Project 11: Water Treatment & Expansion</h5>
+                        <h5 class="card-title"> Project 14: Water Treatment & Expansion</h5>
                         <p class="card-text">The project, which began in September 2011, was funded through a 21.6 million dollar loan facility from the US and was undertaken by UEM Incorporated. The project involved the expansion of the headwater and the rehabilitation of the old one which was constructed in 1961.</p>
                         <p><strong>Duration:</strong> [2013-2014]</p>
                         <p><strong>Country:</strong> [Ghana]</p>
@@ -315,7 +315,7 @@
                     <img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%2013.png" class="card-img-top" alt="Portfolio Item 13">
                     <img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%2013a.png" class="card-img-top" alt="Portfolio Item 13">
                     <div class="card-body">
-                        <h5 class="card-title"> Project 14: Metropolitan Workshop</h5>
+                        <h5 class="card-title"> Project 15: Metropolitan Workshop</h5>
                         <p class="card-text">The goal of the Workshop is to make an inquiry into the spatial dynamics of a Metropolitan area(Ejura). Assess it infrastructure services and their corresponding population usage. On the basis of these, recommed and design a Master and local plan for the area. An inquiry was then chosen to specifically focus on designing a Waste Management Plan for the area.</p>
                         <p><strong>Duration:</strong> [2017-2018]</p>
                         <p><strong>Country:</strong> [Ghana]</p>
@@ -330,7 +330,7 @@
                 <div class="card">
                     <img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%2014.png" class="card-img-top" alt="Portfolio Item 14">
                     <div class="card-body">
-                        <h5 class="card-title"> Project 15: Muncipal Workshop</h5>
+                        <h5 class="card-title"> Project 16: Muncipal Workshop</h5>
                         <p class="card-text">The goal of the Workshop is to make an inquiry into the spatial dynamics of a muncipality(Mampong). Assess it infrastructure services and their corresponding population usage. On the basis of these, recommed and design a Master and local plan for the area.</p>
                         <p><strong>Duration:</strong> [2016-2017]</p>
                         <p><strong>Country:</strong> [Ghana]</p>
@@ -345,7 +345,7 @@
                 <div class="card">
                     <img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%2015.png" class="card-img-top" alt="Portfolio Item 15">
                     <div class="card-body">
-                        <h5 class="card-title"> Project 16: Rural Workshop</h5>
+                        <h5 class="card-title"> Project 17: Rural Workshop</h5>
                         <p class="card-text">The goal of the Workshop is to make an inquiry into the spatial dynamics of a Rural Area(Bobiem). Assess it infrastructure services and their corresponding population usage. On the basis of these, recommed and design a Master and local plan for the area.</p>
                         <p><strong>Duration:</strong> [2015-2016]</p>
                         <p><strong>Country:</strong> [Ghana]</p>
@@ -360,7 +360,7 @@
                 <div class="card">
                     <img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%2016.png" class="card-img-top" alt="Portfolio Item 16">
                     <div class="card-body">
-                        <h5 class="card-title"> Project 17: IDEA</h5>
+                        <h5 class="card-title"> Project 18: IDEA</h5>
                         <p class="card-text">Our Goal is to: Improve livelihoods in a manner that reduces poverty and empowers the young and vulnerable.</p>
                         <p><strong>Duration:</strong> [2017]</p>
                         <p><strong>Country:</strong> [Ghana]</p>
