--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <div class="card">
                     <img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%203.png" class="card-img-top" alt="Portfolio Item 3">
                     <div class="card-body">
-                        <h5 class="card-title">Project 3: Monitoring Land use change</h5>
+                        <h5 class="card-title">Project 3: Quantitative Monitoring Land use change</h5>
                         <p class="card-text">In the face of rapid environmental shifts and anthropogenic pressures, the effective monitoring and management of conservation areas have become paramount. Our Research focuses on National Reserves increasingly vulnerable to threats from urbanization and resource degradation. To address this, our research aimed to produce detailed land use/land cover (LULC) maps and incorporate a robust change detection mechanism tailored for West African conservation reserves. We leverage different Machine Learning Algorithms to create high-quality land use maps and detect changes. Read about the work by following the link bellow.</p>
                         <p><strong>Duration:</strong> [2021 - present]</p>
                         <p><strong>Country:</strong> [West African Landscapes]</p>
@@ -125,8 +125,8 @@
                 <div class="card">
                     <img src="https://raw.githubusercontent.com/desmond-lartey/Portfolio-Website/Fires/img/Project%204.png" class="card-img-top" alt="Portfolio Item 4">
                     <div class="card-body">
-                        <h5 class="card-title"> Project 4:Machine Learning for Land use classification</h5>
-                        <p class="card-text">Monitoring Bush Encroachment and Landuse change for Comoé and Lamto National reserve (1960-2022).</p>
+                        <h5 class="card-title"> Project 4: Machine Learning for Land use classification</h5>
+                        <p class="card-text">In the face of rapid environmental shifts and anthropogenic pressures, the effective monitoring and management of conservation areas have become paramount. We need to protect these areas from rapid urbanization and resource degradation. To address this, our research aimed to produce detailed land use/land cover (LULC) maps and incorporate a robust change detection mechanism tailored for West African conservation reserves. Three machine learning algorithms – Random Forest, Support Vector Machine, and Minimum Distance (K-Nearest Neighbour) – were employed to classify multi-temporal satellite imagery. Subsequent change detection analyses were conducted using both Google Earth Engine and ArcGIS Pro to elucidate the patterns of transformations.</p>
                         <p><strong>Duration:</strong> [2022 - present]</p>
                         <p><strong>Country:</strong> [West African Landscapes]</p>
                         <p><strong>Mentor/Referee:</strong> [Prof. Elmar Veenendaal, Michiel van Eupen]</p>
